Fixed #76 Middle vertical alignment

--- a/src/growl.css
+++ b/src/growl.css
@@ -16,12 +16,20 @@
   bottom: 10px;
   right: 15px;
 }
+.growl-container.growl-fixed.middle-right {
+  top: 49%;
+  right: 15px;
+}
 .growl-container.growl-fixed.top-left {
   top: 10px;
   left: 15px;
 }
 .growl-container.growl-fixed.bottom-left {
   bottom: 10px;
+  left: 15px;
+}
+.growl-container.growl-fixed.middle-left {
+  top: 49%;
   left: 15px;
 }
 .growl-container.growl-fixed.top-center {
@@ -34,6 +42,12 @@
   left: 50%;
   margin-left: -200px;
 }
+.growl-container.growl-fixed.middle-center {
+  top: 49%;
+  left: 50%;
+  margin-left: -200px;
+}
+
 
 /*
  * growl-item styles
